# curs-tg-bot

./: .dockerignore  .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/adapters/: base_repo.py  chat.py  keyword_group_map_repo.py  keyword_group_repo.py  keyword_map_repo.py  keyword_repo.py  report_repo.py  tokenizer.py  unit_of_work.py  user.py
app/alembic/: env.py
app/alembic/versions/: 2024_05_22_2338-8a1eddf37464_init_tables.py  2024_05_27_2324-7dafe3f4c5a2_add_keyword_group_and_timestamp_mixin.py  2024_06_01_2210-d70ab90fb440_update_db_schema.py  2024_06_10_1101-6b07e3c950a1_change_keyword_table_pk_int_uuid.py  2024_06_15_1847-e43a7729c9ae_uuid_int_keyword_table_pk.py  2024_06_15_2116-69d05c0940e2_str_int_tguser_and_chat_table_pk.py  2024_06_15_2245-59b300dcfd01_report_table_add.py  2024_06_16_0036-c439d73cd0b4_report_table_nullable.py
app/config/: database.py  settings.py
app/filters/: has_keyword.py
app/handlers/: __init__.py  command.py  configure_bot.py  reports.py  user_message.py
app/keyboards/: callbacks.py  inline.py  text.py
app/models/: __init__.py  chat.py  keyword.py  keyword_map.py  mixins.py  reports.py  user.py
app/services/: base.py  keyword.py  reports.py
app/services/abstract/: repo.py  tokenizer.py  unit_of_work.py
app/services/entity/: chat.py  keyword.py  reports.py  user.py
app/states/: configure_bot.py
docker/: app
